[package]
name = "redvin"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.11", features = ["cargo"] }


[workspace]

members = [
    "metrics",
    "network",
    "nostr_relay",
    "node",
    "rpc",
    "config"
]
