[package]
name = "redvin"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.11", features = ["cargo"] }
config = { version =  "*", path = "./config" }
futures = "0.3.30"

[workspace]

members = [
    "metrics",
    "p2p",
    "nostr_relay",
    "node",
    "rpc",
    "config"
]

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3
