[package]
name = "p2p"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
config = { version =  "*", path = "../config" }
libp2p = {version = "0.53.2", features = [ "async-std", "dns", "kad", "mdns", "noise", "macros", "tcp", "yamux"]}
