[package]
name = "rpc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
config = { version =  "*", path = "../config" }
tonic = "0.10.2"
prost = "0.12.1"
tokio = { version = "1.18", features = ["macros", "rt-multi-thread"] }

[build-dependencies]
tonic-build = "0.10.2"